# best_tilting_plane

./: .gitignore  README.md  best_tilting_plane_gui.py  environment.yml  pyproject.toml
.github/workflows/: ci.yml
src/best_tilting_plane/: __init__.py  __main__.py
src/best_tilting_plane/anthropometry/: __init__.py  de_leva.py
src/best_tilting_plane/gui/: __init__.py  app.py  debounce.py
src/best_tilting_plane/modeling/: __init__.py  biomod.py  conventions.py  segments.py
src/best_tilting_plane/optimization/: __init__.py  dms.py  ipopt.py  solver_options.py
src/best_tilting_plane/simulation/: __init__.py  arm_motion.py  dynamics.py  jerk_motion.py
src/best_tilting_plane/trajectories/: __init__.py  quintic.py
src/best_tilting_plane/visualization/: __init__.py  arm_btp_view.py  arm_deviation.py  arm_top_view.py  btp.py  dynamics.py  external_figure.py  frames.py  markers.py
tests/: test_arm_deviation.py  test_arm_motion.py  test_biomod.py  test_de_leva.py  test_dms.py  test_dynamics.py  test_frames.py  test_gui_animation_controls.py  test_gui_debounce.py  test_gui_plot_data.py  test_jerk_motion.py  test_modeling_conventions.py  test_observables.py  test_optimization.py  test_quintic.py  test_visualization.py
