[build-system]
requires = [
    "setuptools>=68",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "best-tilting-plane"
version = "0.1.0"
description = "Predictive aerial-twist simulations and visualization tools built on biorbd."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "mickaelbegon" },
]
dependencies = [
    "numpy>=1.25",
    "scipy>=1.11",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "black>=24.0",
    "isort>=5.13",
    "flake8>=7.0",
]
opt = [
    "casadi>=3.6",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
